# NSU-labs-C

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  appveyor.yml  test.ps1  test.sh
.github/workflows/: cmake.yml
II семестр/lab8-0 (Алгоритм Краскала)/: README.md
II семестр/lab8-0 (Поиск наименьшего каркаса - Алгоритм Прима)/: README.md
II семестр/lab8-1 (Поиск наименьшего каркаса - Алгоритм Краскала)/: README.md
II семестр/lab8-1 (Поиск наименьшего каркаса - Алгоритм Прима)/: README.md
II семестр/lab9 (Поиск кратчайшего пути - Алгоритм Дейкстры)/: README.md
lab0/: CMakeLists.txt
lab0 (Перевод из любой СС в любую СС)/: README.md
lab0 (Перевод из любой СС в любую СС)/src/: main2.c
lab0 (Перевод из одной СС в другую СС)/: README.md
lab0/src/: converter.c  converter.h  error.c  in_out.c  in_out.h  main.c
lab0/test/: testlab0
lab1-0/: CMakeLists.txt  README.md
lab1-0 (Поиск подстроки в строке - Алгоритм Бойера-Мура)/: todo.txt
lab1-0 (Поиск подстроки в строке - Алгоритм Бойера-Мура)/src/: main.c  main1.c
lab1-0 (Поиск подстроки в строке алгоритмом Бойера-Мура)/: README.md
lab1-0/include/: boyer_moore.h
lab1-0/src/: boyer_moore.c  boyer_moore.h  circular_list.c  circular_list.h  main.c  ring_array.c  ring_array.h  string.c  string.h
lab1-0/test/: testlab1-0
lab1-1/: CMakeLists.txt
lab1-1 (Поиск подстроки в строке - Алгоритм Рабина-Карпа)/: README.md
lab1-1 (Поиск подстроки в строке - Алгоритм Рабина-Карпа)/src/: main.c
lab1-1 (Поиск подстроки в строке алгоритмом Рабина-Карпа)/: README.md
lab1-1/include/: hash.h
lab1-1/src/: circular_list.c  circular_list.h  hash.c  hash.h  main.c  rabin_karp.c  rabin_karp.h  string.c  string.h
lab1-1/test/: testlab1-1
lab1-2/: CMakeLists.txt  README.md
lab1-2/src/: knuth_morris_pratt.c  knuth_morris_pratt.h  main.c  prefix_function.c  prefix_function.h  string.c
lab10/: CMakeLists.txt  README.md
lab10 (Выпуклая оболочка - Алгоритм Эндрю)/: README.md
lab10/src/: andrew.c  andrew.h  error.c  main.c  stack.c  vector.c  vector.h
lab10/test/: testlab10
lab11/: CMakeLists.txt  README.md
lab11/include/: error.h  subject.h  table.h
lab11/src/: error.c  knapsack.c  knapsack.h  main.c  subject.c  subject.h  table.c  vector.c  vector.h
lab2/: CMakeLists.txt
lab2 (Перестановки - Алгоритм Нарайаны)/: README.md
lab2 (Перестановки - Алгоритм Нарайаны)/src/: main.c
lab2/include/: error.h  inout.h  narayana.h
lab2/src/: error.c  inout.c  main.c  narayana.c
lab2/test/: testlab2
lab3-0/: CMakeLists.txt
lab3-0 (Heap Sort)/src/: main.c  main1.c
lab3-0 (Сортировка Heap Sort)/: README.md
lab3-0/src/: error.c  heap.c  heap.h  main.c
lab3-0/test/: testlab3-0
lab3-1/: CMakeLists.txt
lab3-1 (Quick Sort)/src/: main.c  main1.c
lab3-1 (Сортировка Quick Sort)/: README.md
lab3-1/include/: error.h  vector.h
lab3-1/src/: main.c  vector.c  vector.h
lab3-1/test/: testlab3-1
lab3-2 (Merge Sort)/: todo.txt
lab3-2 (Merge Sort)/src/: main.c
lab4/: CMakeLists.txt
lab4 (Калькулятор)/: README.md
lab4 (Калькулятор)/New version/: main.c
lab4 (Калькулятор)/src/: InOut.c  calc.c  calc.h  main.c  postfix.c  stack.c
lab4/include/: calc.h  data.h  stack.h  string.h
lab4/src/: calc.c  calc.h  data.c  error.c  error.h  input.c  input.h  main.c  stack.c  stack.h  string.c
lab4/test/: testlab4
lab5/: CMakeLists.txt  README.md
lab5 (Архиватор Хаффмана)/src/: main.c
lab5/include/: code_table.h  decode.h  priority_list.h  stream.h  tree.h
lab5/src/: bitline.c  bitline.h  code_table.c  decode.c  decode.h  encode.c  encode.h  error.c  error.h  huffman_tree.c  huffman_tree.h  main.c  priority_list.c  priority_list.h  stack.c  stack.h  stream.c  stream.h  tree.c  tree.h
lab5/test/: testlab5
lab6/: CMakeLists.txt
lab6 (АВЛ дерево)/: README.md
lab6/include/: avl-tree.h
lab6/src/: avl-tree.c  main.c  memory.c  memory.h
lab6/test/: testlab6
lab7/: CMakeLists.txt
lab7 (Топологическая сортировка)/: README.md
lab7 (Топологическая сортировка)/src/: main.c
lab7/include/: graph.h  matrix.h  stack.h
lab7/src/: error.c  error.h  graph.c  graph.h  main.c  matrix.c  matrix.h  stack.c  stack.h  topsort.c  topsort.h
lab7/test/: testlab7
lab8-0/: CMakeLists.txt
lab8-0 (Поиск наименьшего каркаса - Алгоритм Краскала)/: README.md
lab8-0 (Поиск наименьшего каркаса - Алгоритм Прима)/: README.md
lab8-0 (Поиск наименьшего каркаса - Алгоритм Прима)/src/: main.c
lab8-0/include/: dsu.h
lab8-0/src/: dsu.c  (+8 more)
lab8-1/: CMakeLists.txt
lab8-1 (Поиск наименьшего каркаса - Алгоритм Прима)/: README.md
lab9/: CMakeLists.txt
lab9 (Поиск кратчайшего пути - Алгоритм Дейкстры)/: README.md
lab9/include/: dijkstra.h  graph.h  output.h
lab9/src/: dijkstra.c  graph.c  heap.c  heap.h  main.c  matrix.h  output.c
lab9/src/Массив/: main.c
lab9/test/: testlab9
modules/: cpp_check.cmake  enable_sanitizers.cmake  test_runner.cmake
(+40 files in other folders)
